--- a/csv_template.html
+++ b/csv_template.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSV Data</title>
-</head>
-<body>
-    <table border="1">
-        {% for row in csv_data %}
-            <tr>
-                {% for item in row %}
-                    <td>{{ item }}</td>
-                {% endfor %}
-            </tr>
-        {% endfor %}
-    </table>
-</body>
-</html>
+<table><thead><tr><th>Filesystem</th><th>Type</th><th>Size</th><th>Used</th><th>Available</th><th>Use%</th><th>Mounted on</th></tr></thead><tbody><tr><td>devtmpfs</td><td>devtmpfs</td><td>3.8G</td><td>0</td><td>3.8G</td><td>0%</td><td>/dev</td></tr><tr><td>tmpfs</td><td>tmpfs</td><td>3.8G</td><td>66M</td><td>3.8G</td><td>2%</td><td>/dev/shm</td></tr><tr><td>tmpfs</td><td>tmpfs</td><td>3.8G</td><td>357M</td><td>3.5G</td><td>10%</td><td>/run</td></tr><tr><td>tmpfs</td><td>tmpfs</td><td>3.8G</td><td>0</td><td>3.8G</td><td>0%</td><td>/sys/fs/cgroup</td></tr><tr><td>/dev/sda4</td><td>ext4</td><td>148G</td><td>100G</td><td>41G</td><td>72%</td><td>/</td></tr><tr><td>/dev/loop2</td><td>squashfs</td><td>128K</td><td>128K</td><td>0</td><td>100%</td><td>/var/lib/snapd/snap/bare/5</td></tr><tr><td>/dev/loop1</td><td>squashfs</td><td>75M</td><td>75M</td><td>0</td><td>100%</td><td>/var/lib/snapd/snap/core22/1122</td></tr><tr><td>/dev/sdb</td><td>ext4</td><td>917G</td><td>799G</td><td>72G</td><td>92%</td><td>/DATA_BKP</td></tr><tr><td>/dev/loop3</td><td>squashfs</td><td>92M</td><td>92M</td><td>0</td><td>100%</td><td>/var/lib/snapd/snap/gtk-common-themes/1535</td></tr><tr><td>/dev/loop0</td><td>squashfs</td><td>40M</td><td>40M</td><td>0</td><td>100%</td><td>/var/lib/snapd/snap/snapd/21184</td></tr><tr><td>/dev/loop5</td><td>squashfs</td><td>64M</td><td>64M</td><td>0</td><td>100%</td><td>/var/lib/snapd/snap/core20/2182</td></tr><tr><td>/dev/loop6</td><td>squashfs</td><td>505M</td><td>505M</td><td>0</td><td>100%</td><td>/var/lib/snapd/snap/gnome-42-2204/172</td></tr><tr><td>/dev/loop7</td><td>squashfs</td><td>32M</td><td>32M</td><td>0</td><td>100%</td><td>/var/lib/snapd/snap/node/8284</td></tr><tr><td>/dev/loop4</td><td>squashfs</td><td>497M</td><td>497M</td><td>0</td><td>100%</td><td>/var/lib/snapd/snap/gnome-42-2204/141</td></tr><tr><td>/dev/sda2</td><td>ext4</td><td>2.0G</td><td>182M</td><td>1.7G</td><td>10%</td><td>/boot</td></tr><tr><td>/dev/sda1</td><td>vfat</td><td>2.0G</td><td>12M</td><td>2.0G</td><td>1%</td><td>/boot/efi</td></tr><tr><td>/dev/sda3</td><td>ext4</td><td>296G</td><td>67G</td><td>214G</td><td>24%</td><td>/home</td></tr><tr><td>tmpfs</td><td>tmpfs</td><td>774M</td><td>80K</td><td>774M</td><td>1%</td><td>/run/user/1008</td></tr><tr><td>tmpfs</td><td>tmpfs</td><td>774M</td><td>0</td><td>774M</td><td>0%</td><td>/run/user/0</td></tr></tbody></table>
