added front with formatted json

--- a/front/index.html
+++ b/front/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/home/PremJha/Desktop/python-script/front/front.css">
-    <script type="text/javascript" src="/home/PremJha/Desktop/python-script/front/back.js"></script>
+    <link rel="stylesheet" href="/home/prem/Desktop/metrics/dev/front/front.css">
+    <script type="text/javascript" src="/home/prem/Desktop/metrics/dev/front/back.js"></script>
     <title>Metrics Form</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
     <label for="password">Password:</label>
     <input type="password" id="password"><br><br>
 
-    <button onclick="callAPI()">Submit</button>
+    <button onclick="getCV()">Submit</button>
 
     <div id="output"></div>
 </body>
