--- a/front/index.html
+++ b/front/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/home/prem/Desktop/metrics/dev/front/front.css">
-    <script type="text/javascript" src="/home/prem/Desktop/metrics/dev/front/back.js"></script>
+    <link rel="stylesheet" href="/home/PremJha/Desktop/python-script/front/front.css">
+    <script type="text/javascript" src="/home/PremJha/Desktop/python-script/front/back.js"></script>
     <title>Metrics Form</title>
 </head>
 <body>
-    <h1>Metrics</h1>
+    <h1 class="logo">Metrics</h1>
     <label for="ip_address">IP Address:</label>
     <input type="text" id="ip_address"><br><br>
 
@@ -17,8 +17,12 @@
 
     <label for="password">Password:</label>
     <input type="password" id="password"><br><br>
-
-    <button onclick="getCV()">Submit</button>
+    <button onclick="callAPI()">submit</button>
+    <section class="get-metrics">
+        <button onclick="getDisk()">GetDisk</button>
+        <button onclick="getCV()">GetMemory</button>
+        <button onclick="getCV()">GetCPU</button>
+    </section>
 
     <div id="output"></div>
 </body>
